# ReduceCord

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.lite.conf.json  tauri.no-gpu.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
tools/: build-profile.mjs
