[package]
name = "discord-web"
version = "0.1.0"
description = "Discord web client in Tauri (does not run discord.exe)"
authors = ["affan"]
edition = "2021"

[lib]
name = "discord_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

